--- a/src/styles/objects/_objects.ratio.scss
+++ b/src/styles/objects/_objects.ratio.scss
@@ -51,6 +51,7 @@ $ratios: (
 	top: 0;
 	bottom: 0;
 	left: 0;
+	right: 0;
 	height: 100%;
 	width: 100%;
 }
@@ -90,7 +91,7 @@ $ratios: (
  */
 
 .o-ratio--img-contain {
-	> .o-ratio__content:before {
+	> .o-ratio__content {
 		height: auto;
 		margin: auto;
 		max-height: 100%;
