Use nodemon instead of custom task as it is more reliable, clean server task, update code formatting for some sass files

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -117,6 +117,7 @@
 @import "utilities/utilities.responsive-spacings";
 @import "utilities/utilities.print";
 @import "utilities/utilities.hide";
-@import 'utilities/utilities.grid';
+@import "utilities/utilities.grid";
 
+// Shame file used for everytihng you will be shamed for.
 @import "shame";
