--- a/src/html/pages/home.marko
+++ b/src/html/pages/home.marko
@@ -1,7 +1,7 @@
 import App from './../app.marko';
 import AppShell from './../layouts/_app-shell.marko';
 
-<${App} ...data.app>
+<${App} ...data>
 <@page>
 	<${AppShell}>
 	<@body>
