--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,6 +59,9 @@
  * Hide.................Helper classes to hide content
  */
 
+// ENV
+@import "env-vars";
+
 // SETTINGS
 @import "settings/settings.config";
 @import "settings/settings.core";
