--- a/src/styles/settings/_settings.global.scss
+++ b/src/styles/settings/_settings.global.scss
@@ -6,8 +6,7 @@
 // need to be made available to the entire codebase.
 
 // Typography
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-	'Segoe UI Symbol' !default;
+$font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !default;
 $font-family-serif: Georgia, 'Times New Roman', Times, serif !default;
 $font-family-monospace: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace !default;
 $font-family-base: $font-family-sans-serif !default;
@@ -33,14 +32,6 @@ $z-layers: (
 	'below': -100,
 	'seabed': -10000,
 );
-
-// Sass MQ settings
-// https://sass-mq.github.io/sass-mq/
-$mq-base-font-size: $global-font-size;
-$mq-show-breakpoints: (); // This is needed for Sass to know it exists before it sets the one bellow. Dunno why.
-@if (config(debug) == true) {
-	$mq-show-breakpoints: (md, lg, xl);
-}
 
 // Sass MQ settings
 // https://sass-mq.github.io/sass-mq/
