--- a/src/html/includes/head-content.marko
+++ b/src/html/includes/head-content.marko
@@ -1,18 +1,18 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-<title>ES6 Web app boilerplate using Gulp + Webpack</title>
+<title>${data.page.title}</title>
 
-<meta name="description" content="">
+<meta name="description" content="Put your description here">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<if(data.isProd === true && data.domainName)>
-<link rel="preconnect" href=`//${data.domainName}` />
-<link rel="dns-prefetch" href=`//${data.domainName}` />
+<if(data.app.isProd === true && data.app.domainName)>
+<link rel="preconnect" href=`//${data.app.domainName}` />
+<link rel="dns-prefetch" href=`//${data.app.domainName}` />
 </if>
 
-<if(data.isProd === true)>
-<for|file| of=data.assets.scripts>
+<if(data.app.isProd === true)>
+<for|file| of=data.app.assets.scripts>
 <link rel="preload" as="script" href=`${file}` />
 </for>
 </if>
@@ -26,27 +26,23 @@
 <!-- Add to homescreen for Chrome on Android -->
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="application-name" content="ES6 Web app boilerplate">
-<link rel="icon" sizes="192x192" href="/images/touch/chrome-touch-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/images/touch/android-icon-192x192.png">
 
 <!-- Add to homescreen for Safari on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="apple-mobile-web-app-title" content="ES6 Web app boilerplate">
-<link rel="apple-touch-icon" href="/images/touch/apple-touch-icon.png">
-
-<!-- Tile icon for Win8 (144x144 + tile color) -->
-<meta name="msapplication-TileImage" content="/images/touch/ms-touch-icon-144x144-precomposed.png">
-<meta name="msapplication-TileColor" content="#327CCB">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/touch/apple-icon-180x180.png">
 
 <!-- Color the status bar on mobile devices -->
 <meta name="theme-color" content="#327CCB">
 
 <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
 <!--
-<link rel="canonical" href=`http://www.${data.domainName}/`>
+<link rel="canonical" href=`http://www.${data.app.domainName}/`>
 -->
 
 
-<for|file| of=data.assets.styles>
+<for|file| of=data.app.assets.styles>
 <link rel="stylesheet" href=`${file}`>
 </for>
