--- a/src/styles/settings/_settings.config.scss
+++ b/src/styles/settings/_settings.config.scss
@@ -5,20 +5,16 @@
 // A map of global config settings. Define any project-level configuration,
 // feature switches, etc. in here.
 
-// TODO: This doesn't work
-// Sass-loader environment variables will prepend `'$env: ' + process.env.NODE_ENV + ';'`
-$environment: development;
-$isDebug: true;
+// The compiler will include a different path based on NODE_ENV that will contain different
+// values for the same env variables. They are storred in src/styles/env
+$isDebug: false !default;
 
-@if variable-exists(env) {
-	@if $env == 'production' {
-		$environment: prod;
-		$isDebug: false;
-	}
+@if ($ENV == "development") {
+	$isDebug: true;
 }
 
 $config: (
-	env: $environment,
+	env: $ENV,
 	debug: $isDebug
 );
 
